* Remove virtual rendering.  * Limit buffer to 10,000 lines.  * Fix wrapping issue by not setting a height on the line divs. Each line will have a minimum height for blank lines.

--- a/styles/mudclient-styles.css
+++ b/styles/mudclient-styles.css
@@ -152,8 +152,15 @@ html, body {
 }
 
 #outputWindow > div,
-#outputWindowBottomInner > div {
-    height: 16px;
+#outputWindowBottomInner > div,
+#sizingDiv {
+    min-height: 16px;
+    line-height: 16px;
+
+}
+
+#staticElements {
+    display: none;
 }
 
 .totalPlayersRow {
